application mobile bug

--- a/src/Styles12.css
+++ b/src/Styles12.css
@@ -166,7 +166,7 @@ margin: 0 -30%;
   /* margin-left:80%; */
   /* padding-left:10%; */
   position:relative;
-  top:-20px;
+  top:-80px;
   margin-top:-10%;
   margin-left:1%;
   
@@ -287,6 +287,7 @@ width:90%;  position:relative;
 .sd{
   text-align:left;
   margin-left:30%;
+  margin-right:10%;
   /* margin-bottom:3%; */
   /* margin-bottom:-4%; */
   position:relative;
